[package]
name = "log_parser_kma"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-based log file parser, helping extract datetime, log levels and messages"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = "4.5.20"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.0"
